gdnative/tests/ui/from_variant_fail_01.rs
use gdnative::prelude::*;

#[derive(FromVariant)]
pub struct Foo {
    #[variant]
    bar: String,
}

fn main() {}
